--- a/trafic-cop-status/new-contact-page.css
+++ b/trafic-cop-status/new-contact-page.css
@@ -45,7 +45,7 @@ select, input[type="text"]{
     vertical-align: top;
     margin: 8px 0 0 0;
 }
-form{
+.input-container{
     display: inline-block;
     width: 77%;}
 label{
@@ -72,7 +72,7 @@ label{
     margin: 7px 0 0 0;
     width: 69%;
 }
-.input-form-name form{
+.input-form-name .input-container{
     width: 46%;
     margin-left: 4%;
     float: left;
@@ -102,7 +102,7 @@ label{
     margin: 0 0 0 20px;
     vertical-align: text-bottom;
 }
-.phoneAndWebsite form, .half-width-form form{
+.phoneAndWebsite .input-container, .half-width-form .input-container{
     width: 32%;
     margin-right: 2%;
 }
@@ -144,7 +144,7 @@ label{
 }
 
 
-.ContactType form{
+.ContactType .input-container{
     margin: 15px 0 0 5px;
 }
 .ContactType label{
@@ -187,7 +187,7 @@ label{
 .TaxPreference{
     margin: 7px 0 35px 0;
 }
-.half-width-form .TaxRate form{
+.half-width-form .TaxRate .input-container{
     display: block;
 }
 .TaxRate{
@@ -209,7 +209,7 @@ label{
         float: none;
         width: 80%;
     }
-    .input-form-name form{
+    .input-form-name .input-container{
         margin-left: 0;
         margin-right: 4%;
     }
@@ -246,7 +246,7 @@ label{
         margin-bottom: 10px;
         margin-left: 0;
     }
-    .main-block form, .input-form-name{
+    .main-block .input-container, .input-form-name{
         width: 100%;
     }
     .create-invoice {
