--- a/trafic-cop-status/css/new-contact-page.css
+++ b/trafic-cop-status/css/new-contact-page.css
@@ -159,7 +159,7 @@ label{
 .customer-service{
     margin-top: 40px;
 }
-.main-block .companyName, #salesRepresentative, #CSR{
+.main-block .companyName{
     background-repeat: no-repeat;
     background-position: 26px 50%;
     padding-left: 100px;
