--- a/trafic-cop-status/css/style.css
+++ b/trafic-cop-status/css/style.css
@@ -1,3 +1,53 @@
+.input-container {
+    display: inline-block;
+}
+label {
+    font-size: 12px;
+    font-weight: 500;
+    position: relative;
+    top: 16px;
+    left: 17px;
+    background: white;
+    padding: 0 4px;
+}
+select, input[type="text"], input[type="date"], textarea {
+    border: 2px solid #e1e4eb;
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    padding: 0 18px;
+    font-size: 16px;
+    font-weight: 500;
+    height: 60px;
+}
+textarea{
+    padding: 10px 18px 0 18px;
+}
+input[type="radio"]:before {
+    background: #fff;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    position: relative;
+    left: -5px;
+    top: -5px;
+    cursor: pointer;
+}
+input[type="radio"]:after {
+    position: relative;
+    top: -17px;
+    left: 7px;
+}
+input[type="radio"] ~ label {
+    display: inline-block;
+    position: relative;
+    font-size: 14px;
+    margin: 0 40px 0 0;
+    top: -1px;
+    cursor: pointer;
+}
+
+
 @media (min-width: 768px){
     .sidebar {
         top: 0;
@@ -1487,3 +1537,136 @@ select {
     line-height: normal;
 
 }
+.ui-datepicker td {
+    border: 0;
+    padding: 25px 5px 0px 10px;
+}
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
+    border: 0;
+    background: transparent;
+    font-size: 16px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    padding: 0;
+}
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active,
+.ui-button:active, .ui-button.ui-state-active:hover,
+.ui-state-default:hover{
+    background: #633afd !important;
+    border-radius: 50%;
+    color: #fff;
+}
+.ui-datepicker {
+    width: 27.4em;
+}
+.ui-datepicker .ui-datepicker-title {
+    line-height: 3.8em;
+    font-size: 20px;
+}
+.ui-widget-header{
+    background: transparent;
+}
+.ui-widget.ui-widget-content{
+    padding: 0;
+}
+.ui-datepicker .ui-datepicker-header {
+    border: 0;
+    border-bottom: 1px solid #dddddd;
+}
+.ui-datepicker-calendar thead{
+    border-bottom: 1px solid #dddddd;
+}
+.ui-datepicker .ui-datepicker-next {
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 4em;
+    border-left: 1px solid #dddddd;
+}
+.ui-datepicker .ui-datepicker-prev {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 4em;
+    border-right: 1px solid #dddddd;
+}
+.ui-datepicker .ui-datepicker-prev:hover, .ui-datepicker .ui-datepicker-next:hover{
+    background: #633afd;
+}
+.ui-datepicker .ui-datepicker-prev .ui-icon-circle-triangle-w:before {
+    content: "\f053" !important;
+    color: #000;
+    margin-right: 20px;
+}
+.ui-datepicker .ui-datepicker-next .ui-icon-circle-triangle-e:before {
+    content: "\f054";
+    color: #000;
+    margin-right: 20px;
+}
+.ui-datepicker .ui-icon{
+    text-indent: 5px;
+    font-family: Font Awesome\ 5 Free;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    background: none;
+    color: transparent;
+}
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus, .ui-button:hover, .ui-button:focus{
+    font-weight: 600;
+}
+.ui-datepicker .ui-datepicker-prev:hover .ui-icon-circle-triangle-w:before,
+.ui-datepicker .ui-datepicker-next:hover .ui-icon-circle-triangle-e:before{
+    color: #fff;
+}
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight{
+    font-weight: 500;
+}
+.ui-state-default:hover{
+    font-weight: 500;
+}
+
+@media (max-width: 425px) {
+    .ui-datepicker {
+        width: 21.4em;
+    }
+    .ui-datepicker td {
+        padding: 15px 0 0 3px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
