--- a/trafic-cop-status/css/style.css
+++ b/trafic-cop-status/css/style.css
@@ -1806,6 +1806,60 @@ select {
 .right{
     float: right;
 }
+.spinner{
+    vertical-align: middle;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #f3f3f3;
+    border-top: 1px solid #633afd;
+    border-left: 1px solid #633afd;
+    border-radius: 100%;
+    animation: spin 1s infinite linear;
+    margin-right: 8px;
+}
 
-
-
+@keyframes spin {
+    from{
+        transform: rotate(0deg);
+    }to{
+         transform: rotate(360deg);
+     }
+}
+.input-form select, .input-form input[type="text"], .input-form input[type="date"], .input-form textarea{
+    border: 2px solid #e1e4eb;
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    padding: 0 18px;
+    font-size: 16px;
+    font-weight: 500;
+    height: 60px;
+}
+.input-container-fw .input-container{
+    width: 100%;
+}
+.table-row .face{
+    border-radius: 50%;
+    width: 35px;
+}
+.approvers-text {
+    display: inline-block;
+    line-height: normal;
+    margin: 0 0 0 5px;
+    vertical-align: middle;
+}
+.approvers-name {
+    font-weight: 500;
+}
+.approvers-name, .approvers-date {
+    line-height: normal;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.approvers-date {
+    position: relative;
+    top: 5px;
+    color: #b3b3b3;
+}
